Documentation updated, Unit tests fixes

--- a/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
@@ -54,15 +54,14 @@
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/addMultipleContacts:onCompletion:" target="_top">addMultipleContacts:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:onCompletion:" target="_top">changePassword:&zwj;withNewPassword:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllContacts" target="_top">getAllContacts</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllContactsOnCompletion:" target="_top">getAllContactsOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllContactsfromGroup:sorted:forNextPage:onCompletion:" target="_top">getAllContactsfromGroup:&zwj;sorted:&zwj;forNextPage:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllGroups" target="_top">getAllGroups</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllGroupsOnCompletion:" target="_top">getAllGroupsOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllGroupsForNextPage:onCompletion:" target="_top">getAllGroupsForNextPage:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAnalyticsSummaryFromDate:toDate:withCompletionBlock:" target="_top">getAnalyticsSummaryFromDate:&zwj;toDate:&zwj;withCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableConnections" target="_top">getAvailableConnections</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableConnectionsOnCompletion:" target="_top">getAvailableConnectionsOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableWallets" target="_top">getAvailableWallets</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableWalletsOnCompletion:" target="_top">getAvailableWalletsOnCompletion:&zwj;</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getContactsInGroup:onCompletion:" target="_top">getContactsInGroup:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getCustomerDetailsOnCompletion:" target="_top">getCustomerDetailsOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getNetworkDetailsFromDate:toDate:mccmnc:withCompletionBlock:" target="_top">getNetworkDetailsFromDate:&zwj;toDate:&zwj;mccmnc:&zwj;withCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initUserWithEmail:andPassword:" target="_top">initUserWithEmail:andPassword:</a></li>
@@ -73,6 +72,8 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:" target="_top">resetUserTokenWithPassword:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/searchContactsWithQuery:inGroup:limit:onCompletion:" target="_top">searchContactsWithQuery:&zwj;inGroup:&zwj;limit:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/searchGroupsWithQuery:limit:onCompletion:" target="_top">searchGroupsWithQuery:&zwj;limit:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/setContactCount:" target="_top">setContactCount:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/setGroupCount:" target="_top">setGroupCount:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:onCompletion:" target="_top">updateUserEmailWithPassword:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/updateUserOnCompletion:" target="_top">updateUserOnCompletion:</a></li>
 </ul>
