User password reset method added. Documentation updated.

--- a/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
@@ -69,6 +69,7 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initUserWithPassword:andNewPassword:" target="_top">initUserWithPassword:&zwj;andNewPassword:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initWithName:phone:defaultConnection:userTypes:verified:" target="_top">initWithName:&zwj;phone:&zwj;defaultConnection:&zwj;userTypes:&zwj;verified:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initWithUserID:" target="_top">initWithUserID:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:" target="_top">resetUserPasswordOnCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:" target="_top">resetUserTokenWithPassword:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/searchContactsWithQuery:inGroup:limit:onCompletion:" target="_top">searchContactsWithQuery:&zwj;inGroup:&zwj;limit:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/searchGroupsWithQuery:limit:onCompletion:" target="_top">searchGroupsWithQuery:&zwj;limit:&zwj;onCompletion:&zwj;</a></li>
