--- a/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/index.html
@@ -317,6 +317,8 @@ Using a connection you can send SMS and HLR requests.
 <dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSUser/initWithUserID:" target="_top">-initWithUserID:</a></tt></dt>
 <dd></dd>
+<dt><tt><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:" target="_top">-resetUserPasswordOnCompletion:</a></tt></dt>
+<dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:" target="_top">-resetUserTokenWithPassword:onCompletion:</a></tt></dt>
 <dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSUser/searchContactsWithQuery:inGroup:limit:onCompletion:" target="_top">-searchContactsWithQuery:inGroup:limit:onCompletion:</a></tt></dt>
@@ -919,6 +921,31 @@ Used for initializing user object with object received from server
 Used when only users id is known
 </p>
 <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSUser/initWithUserID:;name=end --><!-- end discussion -->
+<hr class="betweenAPIEntries">
+<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:;   name=BSUser::resetUserPasswordOnCompletion: --><a name="//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:"></a>
+<h3><a name="resetUserPasswordOnCompletion:">resetUserPasswordOnCompletion:</a></h3>
+<hr class="afterName">
+<div class="declaration_indent">
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/void //apple_ref/occ/tdef/void //apple_ref/occ/tag/void //apple_ref/occ/struct/void //apple_ref/occ/intf/void //apple_ref/doc/anysymbol/void" machineGenerated="true" --><span class="type">void</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:" logicalPath="//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion" target="_top"><span class="function">resetUserPasswordOnCompletion</span></a>:(void(^)(<!-- a logicalPath="//apple_ref/occ/cl/BOOL //apple_ref/occ/tdef/BOOL //apple_ref/occ/tag/BOOL //apple_ref/occ/struct/BOOL //apple_ref/occ/intf/BOOL //apple_ref/doc/anysymbol/BOOL" machineGenerated="true" --><span class="type">BOOL</span><!-- /a --> <span class="param">success</span>, <!-- a logicalPath="//apple_ref/occ/cl/NSArray //apple_ref/occ/tdef/NSArray //apple_ref/occ/tag/NSArray //apple_ref/occ/struct/NSArray //apple_ref/occ/intf/NSArray //apple_ref/doc/anysymbol/NSArray" machineGenerated="true" --><span class="type">NSArray</span><!-- /a --> <span class="type">*</span><a machinegenerated="true" href="../../../BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/instp/BSMessage/errors" logicalPath="//apple_ref/occ/cl/errors //apple_ref/occ/tdef/errors //apple_ref/occ/tag/errors //apple_ref/occ/struct/errors //apple_ref/occ/intf/errors //apple_ref/doc/anysymbol/errors" target="_top"><span class="type">errors</span></a>))<!-- a logicalPath="//apple_ref/occ/econst/block //apple_ref/occ/data/BSUser/block //apple_ref/occ/data/block //apple_ref/occ/clconst/BSUser/block " machineGenerated="true" --><span class="var">block</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:;name=end --></pre>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSUser/resetUserPasswordOnCompletion:/block;   name=resetUserPasswordOnCompletion:::block -->
+<a name="//apple_ref/doc/methodparam/BSUser/resetUserPasswordOnCompletion:/block"></a>
+<code>block</code>
+</dt>
+<dd><p>- Returns true on success or errors on failure</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:;name=start --><p>If you have forgotten or in other ways lost control over your password, 
+you can issue a reset. 
+When doing so, Beepsend will send an email with a link to where you can get 
+your new password.
+</p>
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSUser/resetUserPasswordOnCompletion:;name=end --><!-- end discussion -->
 <hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:;   name=BSUser::resetUserTokenWithPassword:onCompletion: --><a name="//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:"></a>
 <h3><a name="resetUserTokenWithPassword:onCompletion:">resetUserTokenWithPassword:onCompletion:</a></h3>
