SDK documentation updated

--- a/BeepSendSDK/BeepSendSDKDocumentation/BSBatch_h/Classes/BSBatch/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSBatch_h/Classes/BSBatch/index.html
@@ -282,6 +282,8 @@ and later on you can use same batch for sending messages.
 <dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSBatch/initWithID:andLabel:" target="_top">-initWithID:andLabel:</a></tt></dt>
 <dd></dd>
+<dt><tt><a href="index.html#//apple_ref/occ/instm/BSBatch/initWithLabel:" target="_top">-initWithLabel:</a></tt></dt>
+<dd></dd>
 </dl>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSBatch/getDeliveryStatisticsWithCompletionBlock:;   name=BSBatch::getDeliveryStatisticsWithCompletionBlock: --><a name="//apple_ref/occ/instm/BSBatch/getDeliveryStatisticsWithCompletionBlock:"></a>
@@ -326,7 +328,7 @@ and later on you can use same batch for sending messages.
 <a name="//apple_ref/doc/methodparam/BSBatch/initWithID:andLabel:/bLabel"></a>
 <code>bLabel</code>
 </dt>
-<dd><p>- Creation time of batch</p></dd>
+<dd><p>- Batch label</p></dd>
 </dl>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
@@ -338,6 +340,33 @@ and later on you can use same batch for sending messages.
 <!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSBatch/initWithID:andLabel:;name=start --><p>Create Batch object
 </p>
 <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSBatch/initWithID:andLabel:;name=end --><!-- end discussion -->
+<hr class="betweenAPIEntries">
+<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSBatch/initWithLabel:;   name=BSBatch::initWithLabel: --><a name="//apple_ref/occ/instm/BSBatch/initWithLabel:"></a>
+<h3><a name="initWithLabel:">initWithLabel:</a></h3>
+<hr class="afterName">
+<div class="declaration_indent">
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSBatch/initWithLabel:;name=start -->- (<a machinegenerated="true" href="index.html#//apple_ref/occ/cl/BSBatch" logicalPath="//apple_ref/occ/cl/BSBatch" target="_top"><span class="type">BSBatch</span></a> <span class="type">*</span>)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSBatch/initWithLabel:" logicalPath="//apple_ref/occ/instm/BSBatch/initWithLabel" target="_top"><span class="function">initWithLabel</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<!-- a logicalPath="//apple_ref/occ/econst/bLabel //apple_ref/occ/data/BSBatch/bLabel //apple_ref/occ/data/bLabel //apple_ref/occ/clconst/BSBatch/bLabel " machineGenerated="true" --><span class="var">bLabel</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSBatch/initWithLabel:;name=end --></pre>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSBatch/initWithLabel:/bLabel;   name=initWithLabel:::bLabel -->
+<a name="//apple_ref/doc/methodparam/BSBatch/initWithLabel:/bLabel"></a>
+<code>bLabel</code>
+</dt>
+<dd><p>- Batch label</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
+<p><!-- begin return value --></p>
+<p>Returns Batch object
+
+<!-- end return value --></p>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSBatch/initWithLabel:;name=start --><p>Create Batch object
+</p>
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSBatch/initWithLabel:;name=end --><!-- end discussion -->
 <hr class="betweenSections">
 <a name="HeaderDoc_props"></a>
 <h2 class="h2tight">Properties</h2>
@@ -404,7 +433,7 @@ and later on you can use same batch for sending messages.
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Monday, August 04, 2014
+<p class="hd_timestamp">Last Updated: Thursday, September 04, 2014
 </p>
 </div>
 </td>
