--- a/BeepSendSDK/BeepSendSDKDocumentation/BSBatch_h/Classes/BSBatch/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSBatch_h/Classes/BSBatch/toc.html
@@ -48,6 +48,7 @@
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSBatch/getDeliveryStatisticsWithCompletionBlock:" target="_top">getDeliveryStatisticsWithCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSBatch/initWithID:andLabel:" target="_top">initWithID:andLabel:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSBatch/initWithLabel:" target="_top">initWithLabel:</a></li>
 </ul>
 </div>
 </div>
