--- a/BeepSendSDK/BeepSendSDKDocumentation/BSConnection_h/Classes/BSConnection/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSConnection_h/Classes/BSConnection/toc.html
@@ -51,7 +51,8 @@
 <span class="hd_tocAccessSpace">&nbsp;<br></span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
-<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/estimateSMSCostForMessages:onCompletion:" target="_top">estimateSMSCostForMessages:&zwj;onCompletion:&zwj;</a></li>
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/bulkHLRForNumbers:onCompletion:" target="_top">bulkHLRForNumbers:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/estimateSMSCostForMessages:onCompletion:" target="_top">estimateSMSCostForMessages:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getAnalyticsSummaryFromDate:toDate:withCompletionBlock:" target="_top">getAnalyticsSummaryFromDate:&zwj;toDate:&zwj;withCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getCurrentPricelistOnCompletion:" target="_top">getCurrentPricelistOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getDetailsForBatch:onCompletion:" target="_top">getDetailsForBatch:&zwj;onCompletion:&zwj;</a></li>
@@ -59,12 +60,17 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getDetailsForSMS:onCompletion:" target="_top">getDetailsForSMS:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getNetworkDetailsFromDate:toDate:mccmnc:withCompletionBlock:" target="_top">getNetworkDetailsFromDate:&zwj;toDate:&zwj;mccmnc:&zwj;withCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getPreviousBatchesOnCompletion:" target="_top">getPreviousBatchesOnCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getPricelistsAsCsvOnCompletion:" target="_top">getPricelistsAsCsvOnCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getPricelistsDiffAsCsvForPricelist:andPricelist:onCompletion:" target="_top">getPricelistsDiffAsCsvForPricelist:&zwj;andPricelist:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getPricelistsDiffForPricelist:andPricelist:onCompletion:" target="_top">getPricelistsDiffForPricelist:&zwj;andPricelist:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getPricelistsOnCompletion:" target="_top">getPricelistsOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/getTwoWayBatchForID:onCompletion:" target="_top">getTwoWayBatchForID:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/immediateHLRForNumber:onCompletion:" target="_top">immediateHLRForNumber:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initConnectionWithID:" target="_top">initConnectionWithID:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initConnectionWithID:apiToken:callbacks:customer:description:label:systemID:tlvformccandmnc:type:users:wallet:whitelist:password:" target="_top">initConnectionWithID:&zwj;apiToken:&zwj;callbacks:&zwj;customer:&zwj;description:&zwj;label:&zwj;systemID:&zwj;tlvformccandmnc:&zwj;type:&zwj;users:&zwj;wallet:&zwj;whitelist:&zwj;password:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initWithConnectionModel:withNewPassword:" target="_top">initWithConnectionModel:&zwj;withNewPassword:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initWithConnectionModel:withNewToken:" target="_top">initWithConnectionModel:&zwj;withNewToken:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/resetConnectionPasswordOnCompletion:" target="_top">resetConnectionPasswordOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/resetConnectionTokenOnCompletion:" target="_top">resetConnectionTokenOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/sendMultipleSMS:withCompletionBlock:" target="_top">sendMultipleSMS:&zwj;withCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/sendSMS:withCompletionBlock:" target="_top">sendSMS:withCompletionBlock:</a></li>
