--- a/BeepSendSDK/BeepSendSDKDocumentation/BSCountry_h/Classes/BSCountry/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSCountry_h/Classes/BSCountry/index.html
@@ -277,35 +277,35 @@ function disclosure_triangle(elt) {
 <br><a name="HeaderDoc_methods"></a>
 <h2 class="h2tight">Methods</h2>
 <dl>
-<dt><tt><a href="index.html#//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:" target="_top">-initCountryNamed:withCountryCode:andCallingCode:</a></tt></dt>
+<dt><tt><a href="index.html#//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:" target="_top">-initCountryWithID:named:withCountryCode:andCallingCode:</a></tt></dt>
 <dd></dd>
 </dl>
 <hr class="betweenAPIEntries">
-<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:;   name=BSCountry::initCountryNamed:withCountryCode:andCallingCode: --><a name="//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:"></a>
-<h3><a name="initCountryNamed:withCountryCode:andCallingCode:">initCountryNamed:withCountryCode:andCallingCode:</a></h3>
+<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:;   name=BSCountry::initCountryWithID:named:withCountryCode:andCallingCode: --><a name="//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:"></a>
+<h3><a name="initCountryWithID:named:withCountryCode:andCallingCode:">initCountryWithID:named:withCountryCode:andCallingCode:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:;name=start -->- (<a machinegenerated="true" href="index.html#//apple_ref/occ/cl/BSCountry" logicalPath="//apple_ref/occ/cl/BSCountry" target="_top"><span class="type">BSCountry</span></a> <span class="type">*</span>)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:" logicalPath="//apple_ref/occ/instm/BSCountry/initCountryNamed" target="_top"><span class="function">initCountryNamed</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<span class="param">cName</span> 
-        <!-- a logicalPath="//apple_ref/occ/instm/BSCountry/withCountryCode //apple_ref/occ/clm/BSCountry/withCountryCode //apple_ref/occ/intfcm/BSCountry/withCountryCode //apple_ref/occ/intfm/BSCountry/withCountryCode //apple_ref/occ/func/withCountryCode //apple_ref/occ/ftmplt/BSCountry/withCountryCode //apple_ref/occ/defn/withCountryCode //apple_ref/occ/macro/withCountryCode //apple_ref/doc/anysymbol/withCountryCode" machineGenerated="true" --><span class="function">withCountryCode</span><!-- /a -->:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<span class="param">cCountryCode</span> <!-- a logicalPath="//apple_ref/occ/instm/BSCountry/andCallingCode //apple_ref/occ/clm/BSCountry/andCallingCode //apple_ref/occ/intfcm/BSCountry/andCallingCode //apple_ref/occ/intfm/BSCountry/andCallingCode //apple_ref/occ/func/andCallingCode //apple_ref/occ/ftmplt/BSCountry/andCallingCode //apple_ref/occ/defn/andCallingCode //apple_ref/occ/macro/andCallingCode //apple_ref/doc/anysymbol/andCallingCode" machineGenerated="true" --><span class="function">andCallingCode</span><!-- /a -->:(<!-- a logicalPath="//apple_ref/occ/cl/NSNumber //apple_ref/occ/tdef/NSNumber //apple_ref/occ/tag/NSNumber //apple_ref/occ/struct/NSNumber //apple_ref/occ/intf/NSNumber //apple_ref/doc/anysymbol/NSNumber" machineGenerated="true" --><span class="type">NSNumber</span><!-- /a --> <span class="type">*</span>)<!-- a logicalPath="//apple_ref/occ/econst/cCallingCode //apple_ref/occ/data/BSCountry/cCallingCode //apple_ref/occ/data/cCallingCode //apple_ref/occ/clconst/BSCountry/cCallingCode " machineGenerated="true" --><span class="var">cCallingCode</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:;name=start -->- (<a machinegenerated="true" href="index.html#//apple_ref/occ/cl/BSCountry" logicalPath="//apple_ref/occ/cl/BSCountry" target="_top"><span class="type">BSCountry</span></a> <span class="type">*</span>)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:" logicalPath="//apple_ref/occ/instm/BSCountry/initCountryWithID" target="_top"><span class="function">initCountryWithID</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<span class="param">cID</span> <!-- a logicalPath="//apple_ref/occ/instm/BSCountry/named //apple_ref/occ/clm/BSCountry/named //apple_ref/occ/intfcm/BSCountry/named //apple_ref/occ/intfm/BSCountry/named //apple_ref/occ/func/named //apple_ref/occ/ftmplt/BSCountry/named //apple_ref/occ/defn/named //apple_ref/occ/macro/named //apple_ref/doc/anysymbol/named" machineGenerated="true" --><span class="function">named</span><!-- /a -->:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<span class="param">cName</span> 
+        <!-- a logicalPath="//apple_ref/occ/instm/BSCountry/withCountryCode //apple_ref/occ/clm/BSCountry/withCountryCode //apple_ref/occ/intfcm/BSCountry/withCountryCode //apple_ref/occ/intfm/BSCountry/withCountryCode //apple_ref/occ/func/withCountryCode //apple_ref/occ/ftmplt/BSCountry/withCountryCode //apple_ref/occ/defn/withCountryCode //apple_ref/occ/macro/withCountryCode //apple_ref/doc/anysymbol/withCountryCode" machineGenerated="true" --><span class="function">withCountryCode</span><!-- /a -->:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<span class="param">cCountryCode</span> <!-- a logicalPath="//apple_ref/occ/instm/BSCountry/andCallingCode //apple_ref/occ/clm/BSCountry/andCallingCode //apple_ref/occ/intfcm/BSCountry/andCallingCode //apple_ref/occ/intfm/BSCountry/andCallingCode //apple_ref/occ/func/andCallingCode //apple_ref/occ/ftmplt/BSCountry/andCallingCode //apple_ref/occ/defn/andCallingCode //apple_ref/occ/macro/andCallingCode //apple_ref/doc/anysymbol/andCallingCode" machineGenerated="true" --><span class="function">andCallingCode</span><!-- /a -->:(<!-- a logicalPath="//apple_ref/occ/cl/NSNumber //apple_ref/occ/tdef/NSNumber //apple_ref/occ/tag/NSNumber //apple_ref/occ/struct/NSNumber //apple_ref/occ/intf/NSNumber //apple_ref/doc/anysymbol/NSNumber" machineGenerated="true" --><span class="type">NSNumber</span><!-- /a --> <span class="type">*</span>)<!-- a logicalPath="//apple_ref/occ/econst/cCallingCode //apple_ref/occ/data/BSCountry/cCallingCode //apple_ref/occ/data/cCallingCode //apple_ref/occ/clconst/BSCountry/cCallingCode " machineGenerated="true" --><span class="var">cCallingCode</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
 <dl>
 <dt>
-<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSCountry/initCountryNamed:withCountryCode:andCallingCode:/cName;   name=initCountryNamed:withCountryCode:andCallingCode:::cName -->
-<a name="//apple_ref/doc/methodparam/BSCountry/initCountryNamed:withCountryCode:andCallingCode:/cName"></a>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:/cName;   name=initCountryWithID:named:withCountryCode:andCallingCode:::cName -->
+<a name="//apple_ref/doc/methodparam/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:/cName"></a>
 <code>cName</code>
 </dt>
 <dd><p>- Name of the country this network resides in</p></dd>
 <dt>
-<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSCountry/initCountryNamed:withCountryCode:andCallingCode:/cCountryCode;   name=initCountryNamed:withCountryCode:andCallingCode:::cCountryCode -->
-<a name="//apple_ref/doc/methodparam/BSCountry/initCountryNamed:withCountryCode:andCallingCode:/cCountryCode"></a>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:/cCountryCode;   name=initCountryWithID:named:withCountryCode:andCallingCode:::cCountryCode -->
+<a name="//apple_ref/doc/methodparam/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:/cCountryCode"></a>
 <code>cCountryCode</code>
 </dt>
 <dd><p>- Country code (ISO-3166-1)</p></dd>
 <dt>
-<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSCountry/initCountryNamed:withCountryCode:andCallingCode:/cCallingCode;   name=initCountryNamed:withCountryCode:andCallingCode:::cCallingCode -->
-<a name="//apple_ref/doc/methodparam/BSCountry/initCountryNamed:withCountryCode:andCallingCode:/cCallingCode"></a>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:/cCallingCode;   name=initCountryWithID:named:withCountryCode:andCallingCode:::cCallingCode -->
+<a name="//apple_ref/doc/methodparam/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:/cCallingCode"></a>
 <code>cCallingCode</code>
 </dt>
 <dd><p>- Country calling code</p></dd>
@@ -317,9 +317,9 @@ function disclosure_triangle(elt) {
 
 <!-- end return value --></p>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:;name=start --><p>Create Country object
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:;name=start --><p>Create Country object
 </p>
-<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:;name=end --><!-- end discussion -->
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:;name=end --><!-- end discussion -->
 <hr class="betweenSections">
 <a name="HeaderDoc_props"></a>
 <h2 class="h2tight">Properties</h2>
@@ -373,7 +373,7 @@ function disclosure_triangle(elt) {
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Monday, August 04, 2014
+<p class="hd_timestamp">Last Updated: Thursday, September 04, 2014
 </p>
 </div>
 </td>
