--- a/BeepSendSDK/BeepSendSDKDocumentation/BSNetwork_h/Classes/BSNetwork/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSNetwork_h/Classes/BSNetwork/toc.html
@@ -46,7 +46,7 @@
 <div toc="collapsible" class="collapsible">
 
 <ul class="tocSubEntryList">
-<!-- C --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSNetwork/operator_initNetworkWithMCCMNC:withComment:price:fromCountry:operator:" target="_top">operator initNetworkWithMCCMNC:withComment:price:fromCountry:operator:</a></li>
+<!-- C --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSNetwork/operator_initNetworkWithMCCMNC:withComment:price:fromCountry:operator:oldPrice:difference:" target="_top">operator initNetworkWithMCCMNC:withComment:price:fromCountry:operator:oldPrice:difference:</a></li>
 </ul>
 </div>
 </div>
@@ -64,7 +64,9 @@
 <ul class="tocSubEntryList">
 <!-- public --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/comment" target="_top">comment</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/country" target="_top">country</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/difference" target="_top">difference</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/mccmnc" target="_top">mccmnc</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/oldPrice" target="_top">oldPrice</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/operatorName" target="_top">operatorName</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instp/BSNetwork/price" target="_top">price</a></li>
 </ul>
