--- a/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
@@ -62,8 +62,13 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableConnectionsOnCompletion:" target="_top">getAvailableConnectionsOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableWallets" target="_top">getAvailableWallets</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAvailableWalletsOnCompletion:" target="_top">getAvailableWalletsOnCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getConversationsOnCompletion:" target="_top">getConversationsOnCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getCustomerDetailsOnCompletion:" target="_top">getCustomerDetailsOnCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getDetailsForConversation:onCompletion:" target="_top">getDetailsForConversation:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getGroupDetails:onCompletion:" target="_top">getGroupDetails:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getNetworkDetailsFromDate:toDate:mccmnc:withCompletionBlock:" target="_top">getNetworkDetailsFromDate:&zwj;toDate:&zwj;mccmnc:&zwj;withCompletionBlock:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getRecipientNumbersOnCompletion:" target="_top">getRecipientNumbersOnCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getWalletDetailsForID:onCompletion:" target="_top">getWalletDetailsForID:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initUserWithEmail:andPassword:" target="_top">initUserWithEmail:andPassword:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initUserWithID:name:email:phone:customer:apiToken:defaultConnection:userTypes:maxLevel:verified:" target="_top">initUserWithID:&zwj;name:&zwj;email:&zwj;phone:&zwj;customer:&zwj;apiToken:&zwj;defaultConnection:&zwj;userTypes:&zwj;maxLevel:&zwj;verified:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initUserWithPassword:andNewPassword:" target="_top">initUserWithPassword:&zwj;andNewPassword:&zwj;</a></li>
