--- a/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/Classes/BSWallet/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/Classes/BSWallet/toc.html
@@ -48,6 +48,7 @@
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/addEmail:onCompletion:" target="_top">addEmail:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/getEmailsOnCompletion:" target="_top">getEmailsOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:" target="_top">getEmailWithID:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/getTransactionLogForNextPage:onCompletion:" target="_top">getTransactionLogForNextPage:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/initWalletWithID:name:balance:" target="_top">initWalletWithID:name:balance:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/initWalletWithID:named:balance:minimumBalance:connections:users:" target="_top">initWalletWithID:&zwj;named:&zwj;balance:&zwj;minimumBalance:&zwj;connections:&zwj;users:&zwj;</a></li>
