--- a/BeepSendSDK/BeepSendSDKDocumentation/BSCountry_h/Classes/BSCountry/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSCountry_h/Classes/BSCountry/toc.html
@@ -46,7 +46,7 @@
 <div toc="collapsible" class="collapsible">
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
-<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSCountry/initCountryNamed:withCountryCode:andCallingCode:" target="_top">initCountryNamed:&zwj;withCountryCode:&zwj;andCallingCode:&zwj;</a></li>
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSCountry/initCountryWithID:named:withCountryCode:andCallingCode:" target="_top">initCountryWithID:&zwj;named:&zwj;withCountryCode:&zwj;andCallingCode:&zwj;</a></li>
 </ul>
 </div>
 </div>
