--- a/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/Classes/BSWallet/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/Classes/BSWallet/index.html
@@ -282,6 +282,8 @@ and lists of users and connections linked with wallet.
 <dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSWallet/getEmailsOnCompletion:" target="_top">-getEmailsOnCompletion:</a></tt></dt>
 <dd></dd>
+<dt><tt><a href="index.html#//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:" target="_top">-getEmailWithID:onCompletion:</a></tt></dt>
+<dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSWallet/getTransactionLogForNextPage:onCompletion:" target="_top">-getTransactionLogForNextPage:onCompletion:</a></tt></dt>
 <dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSWallet/initWalletWithID:name:balance:" target="_top">-initWalletWithID:name:balance:</a></tt></dt>
@@ -351,6 +353,34 @@ and lists of users and connections linked with wallet.
 <!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSWallet/getEmailsOnCompletion:;name=start --><p>Method for fetching emails associated with wallet
 </p>
 <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSWallet/getEmailsOnCompletion:;name=end --><!-- end discussion -->
+<hr class="betweenAPIEntries">
+<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:;   name=BSWallet::getEmailWithID:onCompletion: --><a name="//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:"></a>
+<h3><a name="getEmailWithID:onCompletion:">getEmailWithID:onCompletion:</a></h3>
+<hr class="afterName">
+<div class="declaration_indent">
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/void //apple_ref/occ/tdef/void //apple_ref/occ/tag/void //apple_ref/occ/struct/void //apple_ref/occ/intf/void //apple_ref/doc/anysymbol/void" machineGenerated="true" --><span class="type">void</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:" logicalPath="//apple_ref/occ/instm/BSWallet/getEmailWithID" target="_top"><span class="function">getEmailWithID</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<span class="param">emailID</span> <!-- a logicalPath="//apple_ref/occ/instm/BSWallet/onCompletion //apple_ref/occ/clm/BSWallet/onCompletion //apple_ref/occ/intfcm/BSWallet/onCompletion //apple_ref/occ/intfm/BSWallet/onCompletion //apple_ref/occ/func/onCompletion //apple_ref/occ/ftmplt/BSWallet/onCompletion //apple_ref/occ/defn/onCompletion //apple_ref/occ/macro/onCompletion //apple_ref/doc/anysymbol/onCompletion" machineGenerated="true" --><span class="function">onCompletion</span><!-- /a -->:(void(^)(<a machinegenerated="true" href="../../../BSEmail_h/Classes/BSEmail/index.html#//apple_ref/occ/cl/BSEmail" logicalPath="//apple_ref/occ/cl/BSEmail" target="_top"><span class="type">BSEmail</span></a> <span class="type">*</span><span class="param">email</span>, <!-- a logicalPath="//apple_ref/occ/cl/NSArray //apple_ref/occ/tdef/NSArray //apple_ref/occ/tag/NSArray //apple_ref/occ/struct/NSArray //apple_ref/occ/intf/NSArray //apple_ref/doc/anysymbol/NSArray" machineGenerated="true" --><span class="type">NSArray</span><!-- /a --> <span class="type">*</span><a machinegenerated="true" href="../../../BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/instp/BSMessage/errors" logicalPath="//apple_ref/occ/cl/errors //apple_ref/occ/tdef/errors //apple_ref/occ/tag/errors //apple_ref/occ/struct/errors //apple_ref/occ/intf/errors //apple_ref/doc/anysymbol/errors" target="_top"><span class="type">errors</span></a>))<!-- a logicalPath="//apple_ref/occ/econst/block //apple_ref/occ/data/BSWallet/block //apple_ref/occ/data/block //apple_ref/occ/clconst/BSWallet/block " machineGenerated="true" --><span class="var">block</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:;name=end --></pre>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSWallet/getEmailWithID:onCompletion:/emailID;   name=getEmailWithID:onCompletion:::emailID -->
+<a name="//apple_ref/doc/methodparam/BSWallet/getEmailWithID:onCompletion:/emailID"></a>
+<code>emailID</code>
+</dt>
+<dd><p>- emailID to receive email address</p></dd>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSWallet/getEmailWithID:onCompletion:/block;   name=getEmailWithID:onCompletion:::block -->
+<a name="//apple_ref/doc/methodparam/BSWallet/getEmailWithID:onCompletion:/block"></a>
+<code>block</code>
+</dt>
+<dd><p>- Block that will return email or errors</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:;name=start --><p>Method for fetching email with given ID
+</p>
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSWallet/getEmailWithID:onCompletion:;name=end --><!-- end discussion -->
 <hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSWallet/getTransactionLogForNextPage:onCompletion:;   name=BSWallet::getTransactionLogForNextPage:onCompletion: --><a name="//apple_ref/occ/instm/BSWallet/getTransactionLogForNextPage:onCompletion:"></a>
 <h3><a name="getTransactionLogForNextPage:onCompletion:">getTransactionLogForNextPage:onCompletion:</a></h3>
@@ -744,7 +774,7 @@ email will be sent to all listed users.
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Monday, August 04, 2014
+<p class="hd_timestamp">Last Updated: Thursday, September 04, 2014
 </p>
 </div>
 </td>
